[package]
name = "segment"
version = "0.0.10-beta"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.3.4"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "signal", "io-util", "time"] }
parking_lot = "0.12.1"
clap = { version = "3.1.18", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.57"
thiserror = "1.0.31"
bytes = "1.1.0"
atoi = "1.0.0"
chrono = "0.4"
fern = "0.6.1"
log = "0.4.17"
rustyline = "9.1.2"
rand = "0.8.5"
libproc = "0.12.0"
